--- a/TypingGame/style.css
+++ b/TypingGame/style.css
@@ -9,6 +9,10 @@ table {
     font-size:25px;
     padding-bottom:0px;
 }
+p {
+    font-size: 20px;
+    color:gray;
+}
 .container {
     max-width:800px;
 }
