--- a/TypingGame/style.css
+++ b/TypingGame/style.css
@@ -10,6 +10,10 @@ table {
     font-size:25px;
     padding-bottom:0px;
 }
+#scoretable{
+    height:100px;
+    overflow-y: scroll;
+}
 p {
     font-size: 20px;
     color:gray;
